--- a/pytest.ini
+++ b/pytest.ini
@@ -11,4 +11,5 @@ markers =
     regression: Маркировка для регрессионных тестов.
     registration: Маркировка для тестов, связанных с регистрацией пользователей.
     authorization: Маркировка для тестов авторизации.
+    courses: тестовая фикстура
 
