--- a/pytest.ini
+++ b/pytest.ini
@@ -12,4 +12,5 @@ markers =
     registration: Маркировка для тестов, связанных с регистрацией пользователей.
     authorization: Маркировка для тестов авторизации.
     courses: тестовая фикстура
+    dashboard: Маркировка для тестов Dashboard
 
