--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,65 +1,119 @@
-# Имя вашего workflow, которое будет отображаться в интерфейсе GitHub Actions
+## Имя вашего workflow, которое будет отображаться в интерфейсе GitHub Actions
+#name: UI tests
+#
+## Указываем, когда будет запускаться данный workflow
+#on:
+#  push:
+#    branches:
+#      - main  # Запускать workflow, когда будет сделан коммит в ветку main
+#  pull_request:
+#    branches:
+#      - main  # Запускать workflow, когда будет сделан pull request в ветку main
+#
+## Определяем все шаги, которые должны быть выполнены в рамках работы с тестами
+#jobs:
+#  run-tests:
+#    runs-on: ubuntu-latest  # Указываем, что тесты будут запускаться на последней версии Ubuntu
+#
+#    steps:
+#      # 1. Шаг, который будет клонировать ваш репозиторий на машину GitHub Actions
+#      - name: Check out repository
+#        uses: actions/checkout@v4  # Используем GitHub Action для клонирования репозитория
+#
+#      # 2. Шаг для установки Python на виртуальной машине
+#      - name: Set up Python
+#        uses: actions/setup-python@v4  # Используем GitHub Action для установки Python
+#        with:
+#          python-version: '3.11'  # Устанавливаем версию Python 3.11 (можно заменить на другую версию)
+#
+#      # 3. Шаг для установки всех зависимостей проекта
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt
+#          playwright install --with-deps
+#
+#      # 4. Шаг для запуска тестов с использованием pytest и генерации отчётов Allure
+#      - name: Run Playwright tests with pytest and generate Allure results
+#        run: |
+#          pytest -m regression --alluredir=allure-results --numprocesses 2
+#
+#      # 5. Шаг для получения истории отчётов Allure, если она существует
+#      - name: Get Allure history
+#        uses: actions/checkout@v4  # Опять клонируем репозиторий, чтобы получить историю отчётов
+#        if: always()  # Всегда выполняем, независимо от успеха или неудачи предыдущих шагов
+#        continue-on-error: true  # Если здесь возникнет ошибка, workflow всё равно продолжит выполнение
+#        with:
+#          ref: gh-pages  # Указываем ветку gh-pages для получения отчётов
+#          path: gh-pages  # Указываем путь для сохранения отчётов
+#
+#      # 6. Шаг для генерации и отображения отчёта Allure
+#      - name: Generates Allure Report with history
+#        uses: simple-elf/allure-report-action@v1.7  # Используем готовое решение из GitHub Marketplace для генерации Allure отчёта
+#        if: always()  # Этот шаг тоже всегда выполняется
+#        with:
+#          allure_results: allure-results  # Указываем каталог с результатами тестов
+#          allure_history: allure-history  # Указываем каталог для истории отчётов Allure
+#
+#      # 7. Шаг для деплоя отчёта Allure на GitHub Pages, чтобы его можно было просматривать в браузере
+#      - name: Deploy report to Github Pages
+#        if: always()  # Выполняется всегда, независимо от успеха других шагов
+#        uses: peaceiris/actions-gh-pages@v4  # Используем GitHub Action для публикации отчёта на GitHub Pages
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}  # Токен для аутентификации на GitHub
+#          publish_branch: gh-pages  # Указываем, что отчёт будет опубликован в ветке gh-pages
+#          publish_dir: allure-history  # Указываем папку, которая будет опубликована на GitHub Pages
 name: UI tests
 
-# Указываем, когда будет запускаться данный workflow
 on:
   push:
     branches:
-      - main  # Запускать workflow, когда будет сделан коммит в ветку main
+      - main
   pull_request:
     branches:
-      - main  # Запускать workflow, когда будет сделан pull request в ветку main
+      - main
 
-# Определяем все шаги, которые должны быть выполнены в рамках работы с тестами
 jobs:
   run-tests:
-    runs-on: ubuntu-latest  # Указываем, что тесты будут запускаться на последней версии Ubuntu
+    runs-on: ubuntu-latest
 
     steps:
-      # 1. Шаг, который будет клонировать ваш репозиторий на машину GitHub Actions
       - name: Check out repository
-        uses: actions/checkout@v4  # Используем GitHub Action для клонирования репозитория
+        uses: actions/checkout@v4
 
-      # 2. Шаг для установки Python на виртуальной машине
       - name: Set up Python
-        uses: actions/setup-python@v4  # Используем GitHub Action для установки Python
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'  # Устанавливаем версию Python 3.11 (можно заменить на другую версию)
+          python-version: '3.11'
 
-      # 3. Шаг для установки всех зависимостей проекта
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip  
-          pip install -r requirements.txt  
-          playwright install --with-deps  
+          pip install -r requirements.txt
+          playwright install --with-deps
 
-      # 4. Шаг для запуска тестов с использованием pytest и генерации отчётов Allure
-      - name: Run Playwright tests with pytest and generate Allure results
+      - name: Run Playwright tests
         run: |
-          pytest -m regression --alluredir=allure-results --numprocesses 2 
+          pytest -m regression --alluredir=allure-results
 
-      # 5. Шаг для получения истории отчётов Allure, если она существует
-      - name: Get Allure history
-        uses: actions/checkout@v4  # Опять клонируем репозиторий, чтобы получить историю отчётов
-        if: always()  # Всегда выполняем, независимо от успеха или неудачи предыдущих шагов
-        continue-on-error: true  # Если здесь возникнет ошибка, workflow всё равно продолжит выполнение
-        with:
-          ref: gh-pages  # Указываем ветку gh-pages для получения отчётов
-          path: gh-pages  # Указываем путь для сохранения отчётов
+      - name: Generate Allure Report
+        if: always()
+        uses: actions/checkout@v4
+        continue-on-error: true
 
-      # 6. Шаг для генерации и отображения отчёта Allure
-      - name: Generates Allure Report with history
-        uses: simple-elf/allure-report-action@v1.7  # Используем готовое решение из GitHub Marketplace для генерации Allure отчёта
-        if: always()  # Этот шаг тоже всегда выполняется
+      - name: Setup Allure
+        uses: kekeimiku/setup-allure@v2
         with:
-          allure_results: allure-results  # Указываем каталог с результатами тестов
-          allure_history: allure-history  # Указываем каталог для истории отчётов Allure
+          version: 2.27.0
 
-      # 7. Шаг для деплоя отчёта Allure на GitHub Pages, чтобы его можно было просматривать в браузере
-      - name: Deploy report to Github Pages
-        if: always()  # Выполняется всегда, независимо от успеха других шагов
-        uses: peaceiris/actions-gh-pages@v4  # Используем GitHub Action для публикации отчёта на GitHub Pages
+      - name: Generate Allure Report
+        run: |
+          allure generate allure-results -o allure-report --clean
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # Токен для аутентификации на GitHub
-          publish_branch: gh-pages  # Указываем, что отчёт будет опубликован в ветке gh-pages
-          publish_dir: allure-history  # Указываем папку, которая будет опубликована на GitHub Pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./allure-report
+          force_orphan: true
