--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4  # Используем GitHub Action для установки Python
         with:
-          python-version: '3.12'  # Устанавливаем версию Python 3.11 (можно заменить на другую версию)
+          python-version: '3.11'  # Устанавливаем версию Python 3.11 (можно заменить на другую версию)
 
       # 3. Шаг для установки всех зависимостей проекта
       - name: Install dependencies
@@ -48,8 +48,8 @@ jobs:
           path: gh-pages  # Указываем путь для сохранения отчётов
 
       # 6. Шаг для генерации и отображения отчёта Allure
-      - name: Generates Allure Report with history
-        uses: simple-elf/allure-report-action@v2 # Используем готовое решение из GitHub Marketplace для генерации Allure отчёта
+      - name: Build allure report
+      - uses: simple-elf/allure-report-action@v1.12 # Используем готовое решение из GitHub Marketplace для генерации Allure отчёта
         if: always()  # Этот шаг тоже всегда выполняется
         with:
           allure_results: allure-results  # Указываем каталог с результатами тестов
