--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,8 +31,18 @@ jobs:
         run: |
           pytest -m regression --alluredir=allure-results
 
-      - name: Generate and Publish Allure Report
-        uses: allure-framework/allure-deploy@v1
+      - name: Setup Allure
+        uses: unbroken-dome/setup-allure@v1
         with:
-          allure_results: allure-results
-          gh_pages: gh-pages
+          version: 2.27.0
+
+      - name: Generate Allure Report
+        run: |
+          allure generate allure-results -o allure-report --clean
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./allure-report
