--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,18 +31,8 @@ jobs:
         run: |
           pytest -m regression --alluredir=allure-results
 
-      - name: Setup Allure
-        uses: unbroken-dome/setup-allure@v1
+      - name: Publish Allure Report
+        uses: EmilMansurov/allure-publisher@v1.0.0
         with:
-          version: 2.27.0
-
-      - name: Generate Allure Report
-        run: |
-          allure generate allure-results -o allure-report --clean
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: ./allure-report
+          allure-results: allure-results
+          gh-pages-branch: gh-pages
