--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,23 @@ jobs:
         run: |
           pytest -m regression --alluredir=allure-results
 
+      - name: Upload test results artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results
+          path: allure-results/
+          retention-days: 1
+
+  publish-report:
+    runs-on: ubuntu-latest
+    needs: run-tests
+
+    steps:
+      - name: Download test results artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-results
+
       - name: Get Allure history
         uses: actions/checkout@v4
         if: always()
